# convers_prompt

./: Cargo.toml  PKGBUILD  README.md
pkg/convers_prompt/: .BUILDINFO  .MTREE  .PKGINFO
pkg/convers_prompt-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: main.rs
src/app/: main_window.rs
